Handle Request authentication failure

--- a/src/hpc-test/src/test/resources/extent.properties
+++ b/src/hpc-test/src/test/resources/extent.properties
@@ -5,8 +5,8 @@ extent.reporter.spark.out=target/Cucumber-Reports/extent-Report.html
 extent.reporter.spark.vieworder=dashboard,test, category, exception
 
 #PDF Report
-extent.reporter.pdf.start=true
-extent.reporter.pdf.out=target/Cucumber-Reports/PdfReport/ExtentPdf.pdf
+#extent.reporter.pdf.start=true
+#extent.reporter.pdf.out=target/Cucumber-Reports/PdfReport/ExtentPdf.pdf
 
 #HTML Report
 extent.reporter.html.start=true
