HPCDATAMGM-2050: Set page size for data objects search in metadata update migrationn process

--- a/src/hpc-server/hpc-scheduler-migration/src/main/resources/WEB-INF/spring/hpc-scheduler-migration.properties
+++ b/src/hpc-server/hpc-scheduler-migration/src/main/resources/WEB-INF/spring/hpc-scheduler-migration.properties
@@ -141,6 +141,7 @@ hpc.bus.exportDirectory=/mnt/DMETemp/test/data
 hpc.bus.maxDataTranferUploadInProgressWithGeneratedUrlToProcess=100
 hpc.bus.processCollectionDownloadTasksPerformer=false
 hpc.bus.bulkMetadataDataUpdateLimit=100
+hpc.bus.getMetadataUpdateObjectsDefaultPageSize=5000
 	
 hpc.service.notification.systemAdministratorUserId=HPC_DME_Admin
 hpc.service.serverId=server-id
