HPCDATAMGM-2050: Added property to server properties file

--- a/src/hpc-server/hpc-ws-rs-impl/src/main/resources/WEB-INF/spring/hpc-server.properties
+++ b/src/hpc-server/hpc-ws-rs-impl/src/main/resources/WEB-INF/spring/hpc-server.properties
@@ -149,6 +149,7 @@ hpc.bus.dataObjectFileSystemTaskExecutorThreadPoolSize=10
 hpc.bus.getAllDataObjectsExecutorThreadPoolSize=20
 hpc.bus.dataObjectMetadataUpdateTaskExecutorThreadPoolSize=10
 hpc.bus.getAllDataObjectsDefaultPageSize=1000
+hpc.bus.getMetadataUpdateObjectsDefaultPageSize=5000
 hpc.bus.sendReviewNotificationToUser=false
 hpc.bus.maxPermittedInProcessDownloadTasksPerUser=1
 hpc.bus.exportDirectory=/mnt/DMETemp/test/data
