Add testing environment to Configuration properties

--- a/src/hpc-test/configs/Configuration.properties
+++ b/src/hpc-test/configs/Configuration.properties
@@ -2,18 +2,30 @@
 ## This file contains all the application properties needed for running Cucumber tests
 ##
 
-## URL for DME App server
-url=< Configure Me >
+## Environment for testing, set to DEV or UAT
+testingEnvironment=< Configure Me >
 
-## Application token, TODO: Need to Remove
+## URL for DME App server
+urlDEV=< Configure Me >
+
+urlUAT=< Configure Me >
+
+## Application token for DEV
 token=< Configure Me >
 
-# Token for Role=USER, User=dmetestuser
-userToken=< Configure Me >
-# Token for Role=GROUP_ADMIN, User=dmetestgroupadmin
-groupAdminToken=< Configure Me >
-# Token for Role=SYSTEM_ADMIN, User=dmetestsystemadmin
-systemAdminToken=< Configure Me >
+# Token for Role=USER, User=dmetestuser, Environment=DEV
+userTokenDEV=< Configure Me >
+# Token for Role=GROUP_ADMIN, User=dmetestgroupadmin, Environment=DEV
+groupAdminTokenDEV=< Configure Me >
+# Token for Role=SYSTEM_ADMIN, User=dmetestsystemadmin, Environment=DEV
+systemAdminTokenDEV=< Configure Me >
+
+# Token for Role=USER, User=dmetestuser, Environment=UAT
+userTokenUAT=< Configure Me >
+# Token for Role=GROUP_ADMIN, User=dmetestgroupadmin, Environment=UAT
+groupAdminTokenUAT=< Configure Me >
+# Token for Role=SYSTEM_ADMIN, User=dmetestsystemadmin, Environment=UAT
+systemAdminTokenUAT=< Configure Me >
 
 ## Path to Chrome Driver
 driverPath=< Configure Me >
@@ -25,9 +37,9 @@ googleClientSecret=< Configure Me >
 
 googleRefreshToken=< Configure Me >
 
-googleRefreshTokenBlock= < Configure Me >
-
-googleDriveAccessToken = < Configure Me >
+googleRefreshTokenBlock=< Configure Me >
+ 
+googleDriveAccessToken=< Configure Me >
 
 ## AWS Related properties
 awsAccessKey=< Configure Me >
