HPCDATAMGM-1905: Properties for Box added

--- a/src/hpc-web/src/main/resources/appconfigs/preprod-env.conf
+++ b/src/hpc-web/src/main/resources/appconfigs/preprod-env.conf
@@ -27,3 +27,5 @@ gov.nih.nci.hpc.oidc.header=OIDC_access_token
 gov.nih.nci.hpc.drive.clientid=< Configure Me >
 gov.nih.nci.hpc.drive.clientsecret=< Configure Me >
 
+gov.nih.nci.hpc.box.clientid=< Configure Me >
+gov.nih.nci.hpc.box.clientsecret=< Configure Me >
