Initial check-in (prototype).

--- a/src/hpc-web/src/main/resources/appconfigs/preprod-env.conf
+++ b/src/hpc-web/src/main/resources/appconfigs/preprod-env.conf
@@ -8,6 +8,8 @@ gov.nih.nci.hpc.ssl.cert.password=< Configure Me >
 
 gov.nih.nci.hpc.web.server=https://fsdsgl-dmeap01t.ncifcrf.gov
 
+gov.nih.nci.hpc.web.frontend.server=
+
 hpc.serviceaccount=ncif-hpcdm-svc
 
 logging.config=classpath:logback-spring.xml
