--- a/src/hpc-web/src/main/resources/appconfigs/prod-env.conf
+++ b/src/hpc-web/src/main/resources/appconfigs/prod-env.conf
@@ -9,6 +9,8 @@ gov.nih.nci.hpc.ssl.cert.password=< Configure Me >
 
 gov.nih.nci.hpc.web.server=https://hpcdmeweb.nci.nih.gov
 
+gov.nih.nci.hpc.web.frontend.server=
+
 hpc.serviceaccount=ncifhpcdmsvcp
 
 logging.config=classpath:logback-spring.xml
