--- a/src/hpc-web/src/main/resources/appconfigs/dev-env.conf
+++ b/src/hpc-web/src/main/resources/appconfigs/dev-env.conf
@@ -9,6 +9,8 @@ gov.nih.nci.hpc.ssl.cert.password=< Configure Me >
 
 gov.nih.nci.hpc.web.server=https://fsdsgl-dmeap01d.ncifcrf.gov
 
+gov.nih.nci.hpc.web.frontend.server=
+
 hpc.serviceaccount=ncif-hpcdm-svc
 
 logging.config=classpath:logback-spring.xml
