--- a/src/hpc-web/src/main/resources/appconfigs/local-env.conf
+++ b/src/hpc-web/src/main/resources/appconfigs/local-env.conf
@@ -15,6 +15,8 @@ gov.nih.nci.hpc.ssl.cert.password=< Configure Me >
 gov.nih.nci.hpc.web.server=https://fsdsgl-dmeap01t.ncifcrf.gov
 #gov.nih.nci.hpc.web.server=https://hpcdmeweb.nci.nih.gov
 
+gov.nih.nci.hpc.web.frontend.server=http://localhost:3000
+
 hpc.serviceaccount=ncif-hpcdm-svc
 
 logging.config=classpath:logback-spring.xml
