HPCDATAMGM-2096: Replace API which determines whether Path is Collection/DataObject

--- a/src/hpc-web/src/main/resources/appconfigs/common.conf
+++ b/src/hpc-web/src/main/resources/appconfigs/common.conf
@@ -3,6 +3,7 @@ app.version=@project.version@
 contact.email=NCIDataVault@mail.nih.gov
 
 gov.nih.nci.hpc.server.dataObject=${gov.nih.nci.hpc.server}/dataObject
+gov.nih.nci.hpc.server.pathType=${gov.nih.nci.hpc.server}/pathType
 gov.nih.nci.hpc.server.user=${gov.nih.nci.hpc.server}/user
 gov.nih.nci.hpc.server.user.all=${gov.nih.nci.hpc.server}/user/all
 gov.nih.nci.hpc.server.user.active=${gov.nih.nci.hpc.server}/user/active
