--- a/src/hpc-server/hpc-dao-impl/pom.xml
+++ b/src/hpc-server/hpc-dao-impl/pom.xml
@@ -44,6 +44,10 @@
     		<artifactId>ojdbc8</artifactId>
 		</dependency>
 		<dependency>
+			<groupId>io.trino</groupId>
+			<artifactId>trino-jdbc</artifactId>	    
+		</dependency>
+		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-beans</artifactId>
 		</dependency>
