--- a/src/hpc-server/hpc-ws-rs-impl/src/main/resources/WEB-INF/spring/hpc-server.properties
+++ b/src/hpc-server/hpc-ws-rs-impl/src/main/resources/WEB-INF/spring/hpc-server.properties
@@ -23,18 +23,6 @@ hpc.ws.rs.attachment-tmp-directory=/tmp/hpc-attachment
 hpc.ws.rs.attachment-memory-threshold=1024
 hpc.ws.rs.attachment-max-size=
 
-#hpc.ws.rs.ssl.keystore.path=${karaf.base}/etc/hpc-server/keystore.jks
-#hpc.ws.rs.ssl.keystore.type=JKS
-#hpc.ws.rs.ssl.keystore.password=< Configure Me >
-#hpc.ws.rs.ssl.truststore.path=${karaf.base}/etc/hpc-server/keystore.jks
-#hpc.ws.rs.ssl.truststore.type=JKS
-#hpc.ws.rs.ssl.truststore.password=< Configure Me >
-#hpc.ws.rs.ssl.wantClientAuth=false
-#hpc.ws.rs.ssl.needClientAuth=false
-
-#hpc.ws.rs.jetty-engine.minThreads=5
-#hpc.ws.rs.jetty-engine.maxThreads=15
-
 hpc.ws.rs.auth.security.register-user=SYSTEM_ADMIN GROUP_ADMIN
 hpc.ws.rs.auth.security.update-user=SYSTEM_ADMIN GROUP_ADMIN
 hpc.ws.rs.auth.security.delete-user=SYSTEM_ADMIN
@@ -250,6 +238,10 @@ hpc.integration.s3.multipartUploadThreshold=52428800
 hpc.integration.s3.restoreNumDays=2
 hpc.integration.s3.tieringEndpoint=https://s3.amazonaws.com
 hpc.integration.s3.socketTimeout=120000
+
+#hpc.integration.s3.crtLogFile=/path-to-log
+#hpc.integration.s3.keysorePath=/path-to-dme-jks
+#hpc.integration.s3.keysorePassword=
 
 # Google Drive
 hpc.integration.googledrive.hpcApplicationName=NCI-HPC-DME
