--- a/src/hpc-server/hpc-bus-service-impl/pom.xml
+++ b/src/hpc-server/hpc-bus-service-impl/pom.xml
@@ -54,11 +54,14 @@
 		    <groupId>com.google.guava</groupId>
 		    <artifactId>guava</artifactId>
 		</dependency>
-		<!-- https://mvnrepository.com/artifact/org.apache.poi/poi-ooxml -->
 		<dependency>
 		    <groupId>org.apache.poi</groupId>
 		    <artifactId>poi-ooxml</artifactId>
-		    <version>4.1.2</version>
+		</dependency>
+		<dependency>
+		    <groupId>org.apache.logging.log4j</groupId>
+		    <artifactId>log4j-to-slf4j</artifactId>
+		    <version>2.25.0</version>
 		</dependency>
 		<dependency>
 			<groupId>org.aspectj</groupId>
