--- a/src/hpc-server/pom.xml
+++ b/src/hpc-server/pom.xml
@@ -27,7 +27,7 @@
 		<commons-lang3.version>3.11</commons-lang3.version>
 		<commons-collections4.version>4.4</commons-collections4.version>
 		<commons-math3.version>3.6.1</commons-math3.version>
-		<commons-io.version>2.14.0</commons-io.version>
+		<commons-io.version>2.19.0</commons-io.version>
 		<commons-compress.version>1.26.2</commons-compress.version>
 		<commons-pool2.version>2.11.1</commons-pool2.version>
 		<cxf.version>4.0.6</cxf.version>
@@ -52,7 +52,7 @@
 		<google-api-drive.version>v3-rev197-1.25.0</google-api-drive.version>
 		<google-api-client.version>1.32.1</google-api-client.version>
 		<google-http-client.version>1.39.2</google-http-client.version>
-		<poi.version>4.1.2</poi.version>
+		<poi.version>5.4.0</poi.version>
 		<box.version>4.8.0</box.version>
 		<bucket4j.version>8.14.0</bucket4j.version>
 	</properties>
@@ -468,9 +468,9 @@
 			</dependency>
 			<dependency>
 			    <groupId>org.apache.poi</groupId>
-			    <artifactId>poi</artifactId>
+			    <artifactId>poi-ooxml</artifactId>
 			    <version>${poi.version}</version>
-		    </dependency> 
+			</dependency>
 		    <dependency>
 			    <groupId>jakarta.xml.bind</groupId>
 			    <artifactId>jakarta.xml.bind-api</artifactId>
