modified the build yaml file

--- a/.github/workflows/build-dev-api.yml
+++ b/.github/workflows/build-dev-api.yml
@@ -26,7 +26,7 @@ on:
 jobs:
   build:
     name: Build war file
-    runs-on: cbiit-self-hosted
+    runs-on: cbiit-global-runners
     environment: ${{ inputs.environment }}
     env:
       CODE_BRANCH: "${{ github.event.inputs.code_branch }}"
@@ -38,10 +38,11 @@ jobs:
       - name: Set up Java
         uses: actions/setup-java@v4
         with:
-          distribution: 'temurin'
+          distribution: 'corretto'
           java-version: '21'
+          cache: 'maven'
       - name: set up maven
-        uses: s4u/setup-maven-action@v1
+        uses: stCarolas/setup-maven@v4.5
         with:
           maven-version: '3.9.4'
       - name: build the war
@@ -49,3 +50,11 @@ jobs:
           #cd HPC_DME_APIs/src
           cd $GITHUB_WORKSPACE/src
           mvn clean install -D${{ github.event.inputs.environment_target }}
+      - name: upload artifacts for deployment job
+        uses: actions/upload-artifact@v4
+        with:
+          name: hpc-api-artifacts
+          path: |
+            src/hpc-server/hpc-ws-rs-impl/target/*.war
+            src/hpc-server/hpc-scheduler/target/*.war
+            src/hpc-server/hpc-scheduler-migration/target/*.war
