--- a/.github/workflows/deploy-dev-api.yml
+++ b/.github/workflows/deploy-dev-api.yml
@@ -16,21 +16,43 @@ on:
         description: branch to build
         required: true
         default: main
+
+  workflow_run:
+    workflows: ["build.yml"]
+    types:
+      - completed
+
 run-name: "Deploy WARs for ${{ github.event.inputs.environment }} (branch: ${{ github.event.inputs.code_branch }})"
 jobs:
   deploy:
-    name: Deploy war file
+    if: |
+      github.event_name == 'workflow_dispatch' || github.event.workflow_run.conclusion == 'success'
     runs-on: cbiit-global-runners
     environment: ${{ inputs.environment }}
     env:
       CODE_BRANCH: "${{ github.event.inputs.code_branch }}"
     steps:
+      - name: Determine trigger source
+        run: echo "Triggered by ${{ github.event_name }}"
+
+      - name: Print inputs or workflow run data
+        run: |
+          if [ "${{ github.event_name }}" = "workflow_dispatch" ]; then
+            echo "Manual input: Environment = ${{ inputs.environment }}, Branch = ${{ inputs.code_branch }}"
+          else
+            echo "Triggered from workflow run #${{ github.event.workflow_run.run_number }}"
+          fi
+
       - name: Download Artifacts
-        uses: actions/download-artifact@v4
+        uses: dawidd6/action-download-artifact@v4
         with:
           workflow: build-dev-api.yml
+          run_number: ${{ github.event.workflow_run.run_number }}
           name: hpc-api-artifacts
           path: ./artifacts
+      - name: list downloaded artifacts
+        run: |
+          ls -R ./artifacts || echo "Artifacts not found!"
 
       - name: Set up SSH
         run: |
