--- a/.github/workflows/build-deploy-api.yml
+++ b/.github/workflows/build-deploy-api.yml
@@ -1,4 +1,4 @@
-name: Deploy  Dev API war file
+name: Build and Deploy API war file
 permissions:
   contents: write
   id-token: write
@@ -6,9 +6,16 @@ on:
   workflow_dispatch:
     inputs:
       environment:
-        description: env to deploy war file
+        description: env to build war file
         type: choice
         default: dev
+        options:
+          - dev
+          - prod
+      environment_target:
+        description: target environment
+        type: choice
+        default: Ddev
         options:
           - dev
           - prod
@@ -16,40 +23,59 @@ on:
         description: branch to build
         required: true
         default: main
-
-  workflow_run:
-    workflows: ["build.yml"]
-    types:
-      - completed
-
-run-name: "Deploy WARs for ${{ github.event.inputs.environment }} (branch: ${{ github.event.inputs.code_branch }})"
+run-name: "Build WARs for ${{ github.event.inputs.environment }} (branch: ${{ github.event.inputs.code_branch }}, target: ${{ github.event.inputs.environment_target }})"
 jobs:
-  deploy:
-    if: |
-      github.event_name == 'workflow_dispatch' || github.event.workflow_run.conclusion == 'success'
+  build:
+    name: Build war file
     runs-on: cbiit-global-runners
     environment: ${{ inputs.environment }}
     env:
       CODE_BRANCH: "${{ github.event.inputs.code_branch }}"
+    outputs:
+      artifact-name: hpc-api-artifacts
     steps:
-      - name: Determine trigger source
-        run: echo "Triggered by ${{ github.event_name }}"
+      - name: check git installation
+        run: git --version
 
-      - name: Print inputs or workflow run data
-        run: |
-          if [ "${{ github.event_name }}" = "workflow_dispatch" ]; then
-            echo "Manual input: Environment = ${{ inputs.environment }}, Branch = ${{ inputs.code_branch }}"
-          else
-            echo "Triggered from workflow run #${{ github.event.workflow_run.run_number }}"
-          fi
-
-      - name: Download Artifacts
-        uses: dawidd6/action-download-artifact@v4
+      - name: Checkout Code Repository
+        uses: actions/checkout@v4
         with:
-          workflow: build-dev-api.yml
-          run_number: ${{ github.event.workflow_run.run_number }}
+          #ref: ${{ github.event.inputs.code_branch }}
+          ref: ${{ env.CODE_BRANCH }}
+      - name: Set up Java
+        uses: actions/setup-java@v4
+        with:
+          distribution: 'corretto'
+          java-version: '21'
+          cache: 'maven'
+      - name: set up maven
+        uses: stCarolas/setup-maven@v4.5
+        with:
+          maven-version: '3.9.4'
+      - name: build the war
+        run: |
+          #cd HPC_DME_APIs/src
+          cd $GITHUB_WORKSPACE/src
+          mvn clean install -D${{ github.event.inputs.environment_target }}
+      - name: upload artifacts for deployment job
+        uses: actions/upload-artifact@v4
+        with:
           name: hpc-api-artifacts
-          path: ./artifacts
+          path: |
+            src/hpc-server/hpc-ws-rs-impl/target/*.war
+            src/hpc-server/hpc-scheduler/target/*.war
+            src/hpc-server/hpc-scheduler-migration/target/*.war
+
+  deploy:
+    needs: build
+    runs-on: cbiit-global-runners
+    steps:
+      - name: Download Artifacts
+        uses: actions/download-artifact@v4
+        with:
+        name: hpc-api-artifacts
+        path: ./artifacts
+
       - name: list downloaded artifacts
         run: |
           ls -R ./artifacts || echo "Artifacts not found!"
@@ -60,6 +86,7 @@ jobs:
           echo "${{ secrets.TOMCAT_SSH_KEY }}" > ~/.ssh/id_rsa
           chmod 600 ~/.ssh/id_rsa
           ssh-keyscan -H ${{ secrets.TOMCAT_HOST }} >> ~/.ssh/known_hosts
+
       - name: deploy tomcat
         env:
           remote_user: ${{ secrets.REMOTE_USER }}
@@ -83,7 +110,7 @@ jobs:
           ssh -qt ${remote_user}@${remote} " umask 022; cd ${dist} && if [ -d ${app2} ]; then rm -rf ${app2}; fi ;  "
           ssh -qt ${remote_user}@${remote} " cd ${dist}; rm -f hpc-server-[0-9]*.war_backup* hpc-server-[0-9]*.war.backup*; rm -f hpc-scheduler-[0-9]*.war_backup* hpc-scheduler-[0-9]*.war.backup*; rm -f hpc-scheduler-migration-[0-9]*.war_backup* hpc-scheduler-migration-[0-9]*.war.backup* "
           ssh -qt ${remote_user}@${remote} " cd ${dist} && if [ -L ${unit} ]; then rm -f ${unit}; else echo "No symlink found"; fi ; "
-          ssh -qt ${remote_user}@${remote} " cd ${dist} && if [ -L ${unit1} ]; then rm -f ${unit1}; else echo "No symlink found"; fi ;  "    
+          ssh -qt ${remote_user}@${remote} " cd ${dist} && if [ -L ${unit1} ]; then rm -f ${unit1}; else echo "No symlink found"; fi ;  "
           ssh -qt ${remote_user}@${remote} " cd ${dist} && if [ -L ${unit2} ]; then rm -f ${unit2}; else echo "No symlink found"; fi ;  "
           ssh -qt ${remote_user}@${remote} " export TZ='America/New_York'; cd ${dist}; find -type f -name ${app}-*.war -exec mv {} {}_backup_$(date +%Y%m%d.%H%M) \; && find -type f -name ${app1}-[0-9]*.war -exec mv {} {}_backup_$(date +%Y%m%d.%H%M) \; && find -type f -name ${app2}-*.war -exec mv {} {}_backup_$(date +%Y%m%d.%H%M) \;" || exit $?
           echo "upoading wars to remote server"
