modified the build and deploy yaml

--- a/.github/workflows/build-deploy-api.yml
+++ b/.github/workflows/build-deploy-api.yml
@@ -15,7 +15,7 @@ on:
       environment_target:
         description: target environment
         type: choice
-        default: Ddev
+        default: dev
         options:
           - dev
           - prod
@@ -69,6 +69,7 @@ jobs:
   deploy:
     needs: build
     runs-on: cbiit-global-runners
+    environment: ${{ inputs.environment }}
     steps:
       - name: Download Artifacts
         uses: actions/download-artifact@v4
