--- a/src/hpc-web/src/main/resources/appconfigs/common.conf
+++ b/src/hpc-web/src/main/resources/appconfigs/common.conf
@@ -44,6 +44,8 @@ gov.nih.nci.hpc.server.dataObject.registration=${gov.nih.nci.hpc.server}/registr
 gov.nih.nci.hpc.server.bookmark=${gov.nih.nci.hpc.server}/bookmark
 gov.nih.nci.hpc.server.review.query=${gov.nih.nci.hpc.server}/review/query
 gov.nih.nci.hpc.server.review.reminder=${gov.nih.nci.hpc.server}/review/sendReminder
+gov.nih.nci.hpc.server.external.listObjects=${gov.nih.nci.hpc.server}/listObjects
+gov.nih.nci.hpc.server.external.calculateTotalSize=${gov.nih.nci.hpc.server}/calculateTotalSize
 
 spring.http.multipart.max-file-size=5000MB
 spring.http.multipart.max-request-size=5000MB
