HPCDATAMGM-2126: Add REST API to change the priority of a download task

--- a/src/hpc-server/hpc-ws-rs-impl/src/main/resources/WEB-INF/spring/hpc-server.properties
+++ b/src/hpc-server/hpc-ws-rs-impl/src/main/resources/WEB-INF/spring/hpc-server.properties
@@ -74,6 +74,8 @@ hpc.ws.rs.auth.data-management.recover-collection=SYSTEM_ADMIN
 hpc.ws.rs.auth.data-management.recover-data-object=SYSTEM_ADMIN
 hpc.ws.rs.auth.data-management.get-all-download-summary=SYSTEM_ADMIN GROUP_ADMIN
 hpc.ws.rs.auth.data-management.get-all-registration-summary=SYSTEM_ADMIN GROUP_ADMIN
+hpc.ws.rs.auth.data-management.update-download-task=SYSTEM_ADMIN
+
 		
 hpc.ws.rs.auth.data-tiering.tier-data-object=SYSTEM_ADMIN
 hpc.ws.rs.auth.data-tiering.tier-collection=SYSTEM_ADMIN
