--- a/.github/workflows/deploy-dev-api.yml
+++ b/.github/workflows/deploy-dev-api.yml
@@ -74,6 +74,7 @@ jobs:
           unit2: hpc-scheduler-migration.war
         run: |
           set -xe
+          ssh -t ncif-hpcdm-svc@ncias-d3610-v "sudo /sbin/service $remote_tomcat stop"
           echo "Stopping tomcat"
           ssh -qt $remote_user@$remote "sudo /sbin/service $remote_tomcat stop"
           echo "Cleaning old backups and symlinks..."
