HPCMGM-2097: Handle the state of RECEIVED_EXTERNAL in schedular

--- a/src/hpc-server/hpc-scheduler/src/main/resources/WEB-INF/spring/hpc-scheduler.properties
+++ b/src/hpc-server/hpc-scheduler/src/main/resources/WEB-INF/spring/hpc-scheduler.properties
@@ -286,6 +286,7 @@ hpc.scheduler.cron.startGoogleDriveDataObjectDownloadTasks.delay=30 0/1 * * * ?
 hpc.scheduler.cron.startGoogleCloudStorageDataObjectDownloadTasks.delay=39 0/1 * * * ?
 hpc.scheduler.cron.startAsperaDataObjectDownloadTasks.delay=44 0/1 * * * ?
 hpc.scheduler.cron.startBoxDataObjectDownloadTasks.delay=42 0/1 * * * ?
+hpc.scheduler.cron.startArchiveLinkDataObjectDownloadTasks.delay=42 0/1 * * * ?
 hpc.scheduler.cron.processCollectionDownloadTasks.delay=50 0/1 * * * ?
 hpc.scheduler.cron.processBulkDataObjectRegistrationTasks.delay=45 0/1 * * * ?
 hpc.scheduler.cron.completeBulkDataObjectRegistrationTasks.delay=35 0/1 * * * ?
