HPCDATAMGM-2131: Added hpc.ws.rs.profile.excludeJsonURI property to exclude recording JSON in HPC_API_CALLS_AUDIT table.

--- a/src/hpc-server/hpc-ws-rs-impl/src/main/resources/WEB-INF/spring/hpc-server.properties
+++ b/src/hpc-server/hpc-ws-rs-impl/src/main/resources/WEB-INF/spring/hpc-server.properties
@@ -122,6 +122,7 @@ hpc.ws.rs.auth.data-migration.migrate-metadata=SYSTEM_ADMIN
 hpc.ws.rs.auth.restrictedIPAddress=
 hpc.ws.rs.auth.metadataOnlyUsers=
 hpc.service.serverId=server-id
+hpc.ws.rs.profile.excludeJsonURI=/systemAccount
 
 hpc.ws.rs.auth.enableUserRateLimit=false
 hpc.ws.rs.auth.userRateLimitDurationSeconds=10
