--- a/src/hpc-server/hpc-integration-impl/pom.xml
+++ b/src/hpc-server/hpc-integration-impl/pom.xml
@@ -30,6 +30,11 @@
 			<version>${project.version}</version>
 		</dependency>
 		<dependency>
+			<groupId>${project.groupId}</groupId>
+			<artifactId>hpc-domain-model</artifactId>
+			<version>${project.version}</version>
+		</dependency>
+		<dependency>
 			<groupId>org.slf4j</groupId>
 			<artifactId>slf4j-api</artifactId>
 		</dependency>
@@ -124,10 +129,6 @@
 		<dependency>
   			<groupId>software.amazon.awssdk</groupId>
   			<artifactId>aws-core</artifactId>
-		</dependency>
-		<dependency>
-  			<groupId>software.amazon.awssdk.crt</groupId>
-  			<artifactId>aws-crt</artifactId>
 		</dependency>
 		<dependency>
     		<groupId>com.google.apis</groupId>
