HPCDATAMGM-2142: Google Drive Downloads - Connection time out for larger files

--- a/src/hpc-server/hpc-ws-rs-impl/src/main/resources/WEB-INF/spring/hpc-server.properties
+++ b/src/hpc-server/hpc-ws-rs-impl/src/main/resources/WEB-INF/spring/hpc-server.properties
@@ -246,6 +246,8 @@ hpc.integration.s3.socketTimeout=120000
 hpc.integration.googledrive.hpcApplicationName=NCI-HPC-DME
 hpc.integration.googledrive.downloadExecutorThreadPoolSize=8
 hpc.integration.googledrive.chunkSize=5242880
+# Timeout in milliseconds (default 20 sec)
+hpc.integration.googledrive.httpTimeout=60000
 
 # Google Cloud
 hpc.integration.googlecloudstorage.downloadExecutorThreadPoolSize=8
