HPCDATAMGM-2140: Add Retry option for a Google Drive Download task

--- a/src/hpc-server/hpc-scheduler/src/main/resources/WEB-INF/spring/hpc-scheduler.properties
+++ b/src/hpc-server/hpc-scheduler/src/main/resources/WEB-INF/spring/hpc-scheduler.properties
@@ -145,6 +145,7 @@ hpc.service.dataTransfer.maxDeepArchiveInProgressHours=2
 hpc.service.dataTransfer.maxPermittedS3DownloadsForGlobus=7
 hpc.service.dataTransfer.globusTokenExpirationPeriod=120
 hpc.service.dataTransfer.maxPermittedTotalDownloadsSizePerUser=1000
+hpc.service.dataTransfer.googleAccessTokenRetentionPeriod=168
 
 hpc.service.dataTransfer.globusCollectionDownloadBunching=true
 hpc.service.security.authenticationTokenSignatureKey=hpc-token-signature-key
@@ -305,4 +306,4 @@ hpc.scheduler.cron.removeDeletedDataObjects.delay=0 0 * * * ?
 hpc.scheduler.cron.sendWeeklyUserQueryResults.delay=0 0 0 * * 4
 hpc.scheduler.cron.sendMonthlyUserQueryResults.delay=0 0 0 1 * ?
 hpc.scheduler.cron.completeDeepArchiveInProgress.delay=15 0/1 * * * ?
-
+hpc.scheduler.cron.removeGoogleAccessTokens.delay=0 0 * * * ?
