Adding default properties for google drive.

--- a/src/hpc-server/hpc-scheduler-migration/src/main/resources/WEB-INF/spring/hpc-scheduler-migration.properties
+++ b/src/hpc-server/hpc-scheduler-migration/src/main/resources/WEB-INF/spring/hpc-scheduler-migration.properties
@@ -155,6 +155,7 @@ hpc.service.dataTransfer.maxDeepArchiveInProgressHours=2
 hpc.service.dataTransfer.maxPermittedS3DownloadsForGlobus=7
 hpc.service.dataTransfer.globusTokenExpirationPeriod=120
 hpc.service.dataTransfer.maxPermittedTotalDownloadsSizePerUser=1000
+hpc.service.dataTransfer.googleAccessTokenRetentionPeriod=168
 
 hpc.service.dataTransfer.globusCollectionDownloadBunching=true
 hpc.service.security.authenticationTokenSignatureKey=hpc-token-signature-key
@@ -240,7 +241,8 @@ hpc.integration.s3.socketTimeout=120000
 # Google Drive
 hpc.integration.googledrive.hpcApplicationName=NCI-HPC-DME
 hpc.integration.googledrive.downloadExecutorThreadPoolSize=8
-hpc.integration.googledrive.chunkSize=5242880
+hpc.integration.googledrive.chunkSize=268435456
+hpc.integration.googledrive.httpTimeout=60000
 
 # Google Cloud
 hpc.integration.googlecloudstorage.downloadExecutorThreadPoolSize=8
