--- a/src/hpc-server/hpc-scheduler/src/main/resources/WEB-INF/spring/hpc-scheduler.properties
+++ b/src/hpc-server/hpc-scheduler/src/main/resources/WEB-INF/spring/hpc-scheduler.properties
@@ -231,7 +231,8 @@ hpc.integration.s3.socketTimeout=120000
 # Google Drive
 hpc.integration.googledrive.hpcApplicationName=NCI-HPC-DME
 hpc.integration.googledrive.downloadExecutorThreadPoolSize=8
-hpc.integration.googledrive.chunkSize=5242880
+hpc.integration.googledrive.chunkSize=268435456
+hpc.integration.googledrive.httpTimeout=60000
 
 # Google Cloud
 hpc.integration.googlecloudstorage.downloadExecutorThreadPoolSize=8
