Initial code w/ DB script

--- a/src/hpc-server/hpc-scheduler-migration/src/main/resources/WEB-INF/spring/hpc-scheduler-migration.properties
+++ b/src/hpc-server/hpc-scheduler-migration/src/main/resources/WEB-INF/spring/hpc-scheduler-migration.properties
@@ -155,6 +155,7 @@ hpc.service.dataTransfer.maxDeepArchiveInProgressHours=2
 hpc.service.dataTransfer.maxPermittedS3DownloadsForGlobus=7
 hpc.service.dataTransfer.globusTokenExpirationPeriod=120
 hpc.service.dataTransfer.maxPermittedTotalDownloadsSizePerUser=1000
+hpc.service.dataTransfer.googleAccessTokenRetentionPeriod=168
 
 hpc.service.dataTransfer.globusCollectionDownloadBunching=true
 hpc.service.security.authenticationTokenSignatureKey=hpc-token-signature-key
@@ -230,7 +231,7 @@ hpc.integration.ldap.userIdDomainName=nih.gov
 # S3
 hpc.integration.s3.executorThreadPoolSize=8
 hpc.integration.s3.awsTransferManagerThreadPoolSize=8
-hpc.integration.s3.pathStyleAccessEnabledProviders=CLOUDIAN,VAST
+hpc.integration.s3.pathStyleAccessEnabledProviders=CLOUDIAN,VAST,VAST_NCIVS
 hpc.integration.s3.minimumUploadPartSize=52428800
 hpc.integration.s3.multipartUploadThreshold=52428800
 hpc.integration.s3.restoreNumDays=2
@@ -241,6 +242,8 @@ hpc.integration.s3.socketTimeout=120000
 hpc.integration.googledrive.hpcApplicationName=NCI-HPC-DME
 hpc.integration.googledrive.downloadExecutorThreadPoolSize=8
 hpc.integration.googledrive.chunkSize=5242880
+# Timeout in milliseconds (default 20 sec)
+hpc.integration.googledrive.httpTimeout=60000
 
 # Google Cloud
 hpc.integration.googlecloudstorage.downloadExecutorThreadPoolSize=8
@@ -324,4 +327,5 @@ hpc.scheduler.migration.cron.processDataObjectListMigrationReceived.delay=25 0/1
 hpc.scheduler.migration.cron.processCollectionListMigrationReceived.delay=35 0/1 * * * ?
 hpc.scheduler.migration.cron.processBulkMetadataUpdatetMigrationReceived.delay=32 0/1 * * * ?
 hpc.scheduler.migration.cron.processDataObjectMetadataUpdatetMigrationReceived.delay=38 0/1 * * * ?
+hpc.scheduler.migration.cron.processAutoTiering.delay=55 0/1 * * * ?
 
