--- a/src/hpc-server/hpc-ws-rs-impl/src/main/resources/WEB-INF/spring/hpc-server.properties
+++ b/src/hpc-server/hpc-ws-rs-impl/src/main/resources/WEB-INF/spring/hpc-server.properties
@@ -236,7 +236,7 @@ hpc.integration.ldap.userIdDomainName=nih.gov
 # S3
 hpc.integration.s3.executorThreadPoolSize=8
 hpc.integration.s3.awsTransferManagerThreadPoolSize=8
-hpc.integration.s3.pathStyleAccessEnabledProviders=CLOUDIAN,VAST
+hpc.integration.s3.pathStyleAccessEnabledProviders=CLOUDIAN,VAST,VAST_NCIVS
 hpc.integration.s3.minimumUploadPartSize=52428800
 hpc.integration.s3.multipartUploadThreshold=52428800
 hpc.integration.s3.restoreNumDays=2
