--- a/.github/workflows/build-deploy-api.yml
+++ b/.github/workflows/build-deploy-api.yml
@@ -26,7 +26,7 @@ run-name: "Build WARs for ${{ github.event.inputs.environment }} (branch: ${{ gi
 jobs:
   build:
     name: Build war file
-    runs-on: cbiit-global-runners
+    runs-on: "nonprod-org-runner"
     environment: ${{ inputs.environment }}
     env:
       CODE_BRANCH: "${{ github.event.inputs.code_branch }}"
@@ -67,7 +67,7 @@ jobs:
 
   deploy:
     needs: build
-    runs-on: cbiit-global-runners
+    runs-on: "nonprod-org-runner"
     environment: ${{ inputs.environment }}
     steps:
       - name: Download Artifacts
