added labels to the runner section

--- a/.github/workflows/build-dev-api.yml
+++ b/.github/workflows/build-dev-api.yml
@@ -27,7 +27,9 @@ run-name: "Build WARs for ${{ github.event.inputs.environment }} (branch: ${{ gi
 jobs:
   build:
     name: Build war file
-    runs-on: cbiit-global-runners
+    runs-on:
+      group: cbiit-global-runners
+      labels: [self-hosted]
     environment: ${{ inputs.environment }}
     env:
       CODE_BRANCH: "${{ github.event.inputs.code_branch }}"
