--- a/.github/workflows/deploy-dev-api.yml
+++ b/.github/workflows/deploy-dev-api.yml
@@ -26,7 +26,9 @@ jobs:
   deploy:
     if: |
       github.event_name == 'workflow_dispatch' || github.event.workflow_run.conclusion == 'success'
-    runs-on: cbiit-global-runners
+    runs-on:
+      group: cbiit-global-runners
+      labels: [self-hosted]
     environment: ${{ inputs.environment }}
     env:
       CODE_BRANCH: "${{ github.event.inputs.code_branch }}"
